kubernetes/api.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-svc
spec:
  type: NodePort
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
